--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sass": "^1.83.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
